[TFX-3052] Send rebalance transactions to TSM